[gd_scene load_steps=30 format=3 uid="uid://10bidkh0js22"]

[ext_resource type="Texture2D" uid="uid://c33jsuwm8arar" path="res://Asset/UI/Fantasy_Cat_Landscape.jpeg" id="1_j8x21"]
[ext_resource type="Script" path="res://Scene/character_selection.gd" id="1_m2bhj"]
[ext_resource type="Texture2D" uid="uid://b4lcnw0jg57sx" path="res://Asset/Characters/Cats Download/orange_0.png" id="2_hukbj"]
[ext_resource type="Texture2D" uid="uid://cmvgx2eutf0ci" path="res://Asset/UI/Complete_UI_Essential_Pack_Free/01_Flat_Theme/Sprites/UI_Flat_Frame01a.png" id="3_wefjc"]
[ext_resource type="Texture2D" uid="uid://bdq6qf7xo35cx" path="res://Asset/UI/Complete_UI_Essential_Pack_Free/01_Flat_Theme/Sprites/UI_Flat_Select02a_4.png" id="5_ibiun"]
[ext_resource type="Texture2D" uid="uid://dlqm23c28qbre" path="res://Asset/UI/Complete_UI_Essential_Pack_Free/01_Flat_Theme/Sprites/UI_Flat_Select01a_1.png" id="6_0cu58"]
[ext_resource type="Texture2D" uid="uid://bg3n2npyqqeic" path="res://Asset/Characters/Cats Download/black_0.png" id="7_ehf2q"]
[ext_resource type="Texture2D" uid="uid://dkftc4kverayr" path="res://Asset/UI/Complete_UI_Essential_Pack_Free/01_Flat_Theme/Sprites/UI_Flat_InputField01a.png" id="8_2dx0d"]
[ext_resource type="Texture2D" uid="uid://c7c7gj81tga75" path="res://Asset/Characters/Cats Download/white_0.png" id="8_cc4i6"]
[ext_resource type="AudioStream" uid="uid://d2rqg7my7urd7" path="res://Asset/Sound/lclick-13694.mp3" id="8_pu5mb"]
[ext_resource type="StyleBox" uid="uid://dks36vmnsfofm" path="res://Style-Boxs/UI_1.tres" id="10_ord25"]
[ext_resource type="AudioStream" uid="uid://c5cp53s4tlqxq" path="res://Asset/Sound/cash-register-purchase-87313.mp3" id="12_5515u"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_154ul"]
blend_mode = 3

[sub_resource type="AtlasTexture" id="AtlasTexture_as7o0"]
atlas = ExtResource("2_hukbj")
region = Rect2(384, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2avq"]
atlas = ExtResource("2_hukbj")
region = Rect2(416, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8g18"]
atlas = ExtResource("2_hukbj")
region = Rect2(448, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tqiq"]
atlas = ExtResource("2_hukbj")
region = Rect2(480, 480, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jarfl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_as7o0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2avq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8g18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tqiq")
}],
"loop": true,
"name": &"Show",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0agdf"]
atlas = ExtResource("7_ehf2q")
region = Rect2(384, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_px3gv"]
atlas = ExtResource("7_ehf2q")
region = Rect2(416, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tih88"]
atlas = ExtResource("7_ehf2q")
region = Rect2(448, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h651i"]
atlas = ExtResource("7_ehf2q")
region = Rect2(480, 480, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_muu33"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0agdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_px3gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tih88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h651i")
}],
"loop": true,
"name": &"Show",
"speed": 5.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_403xn"]
texture = ExtResource("8_2dx0d")
texture_margin_left = 5.0
texture_margin_right = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_wcpw4"]
atlas = ExtResource("8_cc4i6")
region = Rect2(384, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxqa1"]
atlas = ExtResource("8_cc4i6")
region = Rect2(416, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2brw"]
atlas = ExtResource("8_cc4i6")
region = Rect2(448, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke0d5"]
atlas = ExtResource("8_cc4i6")
region = Rect2(480, 480, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1hcu8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcpw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxqa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2brw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke0d5")
}],
"loop": true,
"name": &"Show",
"speed": 5.0
}]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m2bhj")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_154ul")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_j8x21")
expand_mode = 2
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -68.5
offset_right = 140.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Cat1" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_wefjc")

[node name="Orange0" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/Cat1"]
position = Vector2(48, 31)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_jarfl")
animation = &"Show"

[node name="Orange0Button" type="TextureButton" parent="VBoxContainer/HBoxContainer/Cat1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -32.0
offset_right = -16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 2)
texture_pressed = ExtResource("5_ibiun")
texture_hover = ExtResource("6_0cu58")

[node name="Cat2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_wefjc")

[node name="Black0" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/Cat2"]
position = Vector2(48, 31)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_muu33")
animation = &"Show"
frame = 1
frame_progress = 0.612673

[node name="Black0Button" type="TextureButton" parent="VBoxContainer/HBoxContainer/Cat2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -32.0
offset_right = -16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 2)
texture_pressed = ExtResource("5_ibiun")
texture_hover = ExtResource("6_0cu58")

[node name="Price" type="Label" parent="VBoxContainer/HBoxContainer/Cat2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.5
offset_top = 6.0
offset_right = 33.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_403xn")
text = "100 Coin"

[node name="Cat3" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_wefjc")

[node name="White0" type="AnimatedSprite2D" parent="VBoxContainer/HBoxContainer/Cat3"]
position = Vector2(48, 31)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_1hcu8")
animation = &"Show"

[node name="White0Button" type="TextureButton" parent="VBoxContainer/HBoxContainer/Cat3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -32.0
offset_right = -16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 2)
texture_pressed = ExtResource("5_ibiun")
texture_hover = ExtResource("6_0cu58")

[node name="Price" type="Label" parent="VBoxContainer/HBoxContainer/Cat3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.5
offset_top = 6.0
offset_right = 33.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_403xn")
text = "200 Coin"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.0
offset_top = -300.0
offset_right = 140.0
offset_bottom = -231.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Select a Cat"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = 250.0
offset_right = 22.5
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.904328, 0.772831, 0.180608, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Back"
flat = true

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_pu5mb")

[node name="ShowCoin" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -276.0
offset_bottom = -224.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("10_ord25")

[node name="Container" type="MarginContainer" parent="ShowCoin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.5
offset_top = -34.5
offset_right = 130.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2

[node name="Coin" type="Label" parent="ShowCoin/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Coin : 300"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PurchaseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_5515u")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cat1/Orange0Button" to="." method="_on_orange_0_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cat2/Black0Button" to="." method="_on_black_0_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cat3/White0Button" to="." method="_on_white_0_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
